<resources>
    <string name="app_name">Gerenciador De Eventos</string>
    <string name="action_add_pessoa">Adicionar Convidado</string>


    <string name="button_salvar">Salvar</string>

    <!-- Strings used in fragment_cadastrar_sala -->
    <string name="listar_sala_fragment_title_input_nome_sala">Nome da Sala</string>
    <string name="listar_sala_fragment_title_input_lotacao_sala">Lotação Máxima</string>
    <string name="listar_sala_fragment_title_select_espaco_cafe">Selecione o Espaço de Café</string>

    <!-- Strings used in fragment_cadastrar_evento -->
    <string name="listar_sala_fragment_title_input_nome_evento">Nome do Evento</string>
    <string name="listar_sala_fragment_title_input_selecione_as_salas">Selecione as salas que pertecem ao evento</string>

    <!-- Strings used in adapter_listar_sala -->
    <string name="adapter_listar_sala_title_capacidade">Capacidade: </string>

    <!-- Strings used in list_listar_pessoas -->
    <string name="list_listar_pessoa_title_evento_participante">Eventos Participante: </string>

    <!-- Strings used in menu_activity_main-->
    <string name="menu_activity_main_eventos">Eventos</string>
    <string name="menu_activity_main_Pessoas">Pessoas</string>
    <string name="menu_activity_main_fab_add_evento">Criar Evento</string>
    <string name="menu_activity_main_fab_add_sala">Criar Sala</string>
    <string name="menu_activity_main_fab_add_cafe">Criar Sala de Café</string>
    <string name="menu_activity_main_fab_add_pessoa">Cadastrar Pessoa</string>

    <!-- Strings used in fragment_cadastrar_sala_cafe -->
    <string name="fragment_cadastrar_sala_cafe_title_input_nome_sala">Nome do Espaco do Café</string>
    <string name="fragment_cadastrar_sala_cafe_title_input_lotacao_sala_cafe">Lotação Máxima</string>

    <!-- Strings used in fragment_cadastrar_pessoa -->
    <string name="fragment_cadastrar_pessoa_title_input_nome_pessoa">Nome</string>
    <string name="fragment_cadastrar_pessoa_title_input_sobrenome_pessoa">Sobrenome</string>
    <string name="fragment_cadastrar_pessoa_title_button_save_pessoa">Cadastrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>