<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    tools:context=".fragments.ListarSala">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_margin="@dimen/margin_fragments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/lista_sala_title_nome_sala"
                android:text="@string/listar_sala_fragment_title_input_nome_sala"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
            <EditText
                android:id="@+id/fragment_cadastraR_sala_edt_nome_sala"
                android:layout_width="@dimen/input_edit_text_in_fragments_1"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_fragments_between_views"
                android:layout_marginBottom="@dimen/margin_fragments_between_views">
            </EditText>
            <TextView
                android:text="@string/listar_sala_fragment_title_input_lotacao_sala"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
            <EditText
                android:id="@+id/fragment_cadastraR_sala_edt_lotacao_maxima"
                android:layout_width="wrap_content"
                android:minWidth="@dimen/input_edit_text_in_fragments_2"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_marginTop="@dimen/margin_fragments_between_views"
                android:layout_marginBottom="@dimen/margin_fragments_between_views">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/margin_fragments"
            android:orientation="vertical">
            <Button
                android:id="@+id/fragment_cadastraR_sala_btn_salvar"
                android:text="@string/button_salvar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>